# product-search-agent

./: .env.example  .gitignore  QUICK_START_GUIDE.md  README.md  docker-compose.yml  hello.py  pyproject.toml  render.yaml
backend/: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  craigslist_page.html  ebay_search_results.html  requirements.txt  test_websocket_notifications.py
docs/: API_DOCUMENTATION.md  CONFIGURATION_SETUP_COMPLETE.md  CONFIG_README.md  CORS_PRODUCTION_SETUP.md  CRAIGSLIST_LOCATION_FIX.md  CRAIGSLIST_SCRAPER_FIX.md  DAY_11-12_SEARCH_ORCHESTRATOR_DETAILED_PLAN.md  DAY_13_SCHEDULER_SERVICE_DETAILED_PLAN.md  DAY_14-15_WEBSOCKET_NOTIFICATIONS_DETAILED_PLAN.md  DAY_16-17_EMAIL_SERVICE_DETAILED_PLAN.md  DAY_18_DAILY_DIGEST_SCHEDULER_DETAILED_PLAN.md  DAY_20_API_CLIENT_ROUTING_DETAILED_PLAN.md  DAY_20_FIXES_SUMMARY.md  DAY_21-22_CORE_COMPONENTS_DETAILED_PLAN.md  DAY_21-22_STYLING_POLISH_COMPLETE.md  DAY_23_BUG_FIX_REPORT.md  DAY_23_DASHBOARD_PAGES_DETAILED_PLAN.md  DAY_23_FINAL_TESTING_REPORT.md  DAY_23_TESTING_SUMMARY.md  DAY_24_WEBSOCKET_INTEGRATION_DETAILED_PLAN.md  DAY_28-29_CLOUD_DEPLOYMENT_DETAILED_PLAN.md  DAY_4_DETAILED_PLAN.md  DAY_5-6_CRAIGSLIST_SCRAPER_PLAN.md  DAY_7_FACEBOOK_MARKETPLACE_PLAN.md  DAY_8_EBAY_SCRAPER_COMPLETE.md  DAY_8_EBAY_SCRAPER_FIX.md  DAY_8_EBAY_SCRAPER_PLAN.md  DAY_8_FINAL_SUMMARY.md  DAY_8_SELENIUM_SETUP.md  DAY_9-10_MATCHING_ENGINE_DETAILED_PLAN.md  EMAIL_SENDER_CONFIGURATION_EXPLAINED.md  EXTENSIBLE_SCRAPER_ARCHITECTURE.md  FINAL_FIX_TRAILING_SLASH_ISSUE.md  FRONTEND_API_URL_CONFIGURATION.md  FRONTEND_BUILD_CONFIGURATION.md  GITIGNORE_CONFIGURATION.md  GMAIL_APP_PASSWORD_SETUP_GUIDE.md  HOW_TO_RUN_APPLICATION.md  IMMEDIATE_SEARCH_EXECUTION_PLAN.md  IMMEDIATE_SEARCH_IMPLEMENTATION_COMPLETE.md  (+35 more)
frontend/: .env.development  .env.production  (+11 more)
(+144 files in other folders)
