[project]
name = "product-search-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "beautifulsoup4",
    "selenium",
    "apscheduler",
    "rapidfuzz",
    "spacy",
    "httpx",
    "aiosmtplib",
    "jinja2",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytest",
    "pytest-cov",
    "webdriver-manager",
    "pytest-asyncio",
    "selenium-stealth",
    "apscheduler",
    "websockets",
    "groq",
    "email_validator"
]

[tool.pytest.ini_options]
# Pytest configuration
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.MovedIn20Warning",
]

